--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Spring Animation</string>
     <string name="damping_ratio">Damping ratio:</string>
     <string name="stiffness">stiffness:</string>
+    <string name="drag_me">Drag Me</string>
 </resources>
