--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Spring Animation</string>
     <string name="damping_ratio">Damping ratio:</string>
-    <string name="stiffness">stiffness:</string>
+    <string name="stiffness">Stiffness:</string>
     <string name="drag_me">Drag Me</string>
 </resources>
